--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ando.file.sample">
-
     <!--
          Apps on devices running Android 4.4 (API level 19) or higher cannot
               access external storage outside their own "sandboxed" directory, so
@@ -12,12 +11,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
-
-    <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- 照片的位置信息 -->
+        tools:ignore="ScopedStorage" /> <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 照片的位置信息 -->
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
 
     <application
@@ -38,6 +33,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".ui.core.FileCoreActivity"
