--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         google()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.aliyun.com/nexus/content/groups/public/" }
-        mavenLocal()
+//        mavenLocal()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
     }
@@ -32,8 +32,9 @@ allprojects {
     repositories {
         google()
         maven { url "https://jitpack.io" }
+        maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url "https://maven.aliyun.com/nexus/content/groups/public/" }
-        mavenLocal()
+//        mavenLocal()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
     }
