--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,17 @@ android {
 }
 
 dependencies {
+//    implementation 'com.github.javakam:file.core:3.0.0@aar'
+//    implementation 'com.github.javakam:file.selector:3.0.0@aar'
+//    implementation 'com.github.javakam:file.compressor:3.0.0@aar'
+
+    implementation project(':library_core')
+    implementation project(':library_selector')
+    implementation project(':library_compressor')
+    implementation 'androidx.documentfile:documentfile:1.0.1'
+
+    //----------------------------------------------------------------------------------//
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
@@ -97,27 +108,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-
-    //
-//    implementation 'com.github.javakam:file.core:3.0.0@aar'
-//    implementation 'com.github.javakam:file.selector:3.0.0@aar'
-//    implementation 'com.github.javakam:file.compressor:3.0.0@aar'
-
-    implementation project(':library_core')
-    implementation project(':library_selector')
-    implementation project(':library_compressor')
-    implementation 'androidx.documentfile:documentfile:1.0.1'
-    //
+    //权限;图片
     implementation 'com.permissionx.guolindev:permissionx:1.4.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
-    //
+    //网络;gson
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-
 }
 
 allprojects {
