--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.ando.file.sample">
+    xmlns:tools="http://schemas.android.com/tools">
     <!--
          Apps on devices running Android 4.4 (API level 19) or higher cannot
               access external storage outside their own "sandboxed" directory, so
               the READ_EXTERNAL_STORAGE (and WRITE_EXTERNAL_STORAGE) permissions
               aren't necessary.
     -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" /> <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- 照片的位置信息 -->
-    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
-
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -26,6 +18,7 @@
         tools:ignore="AllowBackup,LockedOrientationActivity">
         <activity
             android:name=".ui.MainActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/MainTheme">
             <intent-filter>
@@ -33,7 +26,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".ui.core.FileCoreActivity"
@@ -75,5 +67,12 @@
             android:name=".ui.MediaInfoActivity"
             android:screenOrientation="portrait" />
     </application>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" /> <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 照片的位置信息 -->
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
