--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ android.enableJetifier=true
 kotlin.code.style=official
 # R8
 # android.enableR8.fullMode=true
+# 2023-04-10 16:28:03
+android.disableAutomaticComponentCreation=true
