--- a/library_core/build.gradle
+++ b/library_core/build.gradle
@@ -9,8 +9,6 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -27,12 +25,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    lintOptions {
-        abortOnError false
-    }
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    lint {
+        abortOnError false
+    }
+    namespace 'ando.file'
     // More than one file was found with OS independent path 'META-INF/library_release.kotlin_module'
 //    packagingOptions {
 //        exclude 'META-INF/*.kotlin_module'
