--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,11 @@ buildscript {
         buildToolsVersion = '31.0.0'
         minSdkVersion = 21
         targetSdkVersion = 31
-        versionCode = 16
-        versionName = "3.6.0"
+        //2023年4月17日 10:32:25
+        versionCode = 17
+        versionName = "3.7.0"
+//        versionCode = 16
+//        versionName = "3.6.0"
     }
     repositories {
         google()
