--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,7 @@ kotlin.code.style=official
 # android.enableR8.fullMode=true
 # 2023-04-10 16:28:03
 android.disableAutomaticComponentCreation=true
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
