--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,16 @@
               the READ_EXTERNAL_STORAGE (and WRITE_EXTERNAL_STORAGE) permissions
               aren't necessary.
     -->
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" /> <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 照片的位置信息 -->
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -67,12 +77,5 @@
             android:name=".ui.MediaInfoActivity"
             android:screenOrientation="portrait" />
     </application>
-    <uses-permission
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" /> <!-- 访问系统自带的文件管理器"下载内容"时需要联网权限 -_-|| -->
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- 照片的位置信息 -->
-    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
