--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,12 @@ buildscript {
         buildToolsVersion = '33.0.2'
         minSdkVersion = 21
         targetSdkVersion = 33
+        //2023年8月29日 09:47:46
+        versionCode = 19
+        versionName = "3.9.0"
         //2023年8月22日 11:26:08
-        versionCode = 18
-        versionName = "3.8.0"
+//        versionCode = 18
+//        versionName = "3.8.0"
         //2023年4月17日 10:32:25
 //        versionCode = 17
 //        versionName = "3.7.0"
